- added exception handling: Large teamdrive tv series folder incomplete strm creation #135
- send Content-Type (Is anything required to run behind a reverse proxy that handles SSL termination? #111)
v0.1.40 (2019-09-11)
- fix for Emby 4.2.1 and 4.3 breaks passthrough reverse-proxy hack #143
- implement for emby 4.2.10 : Passthrough doesn`t work #123
- implement -- Make passthrough default true #132
v0.1.33 (2019-03-06)
- changes for plex
v0.1.32 (2019-01-16)
- add support for tv show seasons > 100
- add local as whitelist for scheduler
- fixes for /list and username+password prompt
v0.1.31 (2019-01-08)
- security fixes - make all POST requests require login
- make GET/POST case insensitive
- remove depricated play method
- security fixes -- ensure only allow PLAY, MODE=VIDEO or MODE=INDEX when folder!=root allow unauthenticated access
v0.1.30 (2019-01-07)
- fix a building STRM issue when filename contains #
- add a new hash file method
- add support for multiple emby logs (for multiple instances)
- add no scheduler version
- don't print STRM log header in append
- testing search fix
- add support for multiple emby IP whitelist (, deliminated)
- add a separate scheduler process
- remove remaining retain folder calls
- fix for 0 STRM files on change tracking
- fix for when not using hashfiles
- remove retain folders parameter from STRM creation
- add file swapping support (using md5 hash - md5files)
- add filesize to STRM log
- change write to append to STRM log
- add faulthandler support
v0.1.28 (2018-08-21)
- wrap exception around dbm sync
- add missing handler for httplib
- add missing handler for LOGERROR
v0.1.27 (2018-08-04)
- handle situation where passthrough=false: add support for service accounts #35
- preliminary working: add support for service accounts #35
- started work on : add support for service accounts #35
- implemented: add search functionality to team drives #83
- started work on add search functionality to team drives #83